--- a/src/app/pages/rank/rank/rank.component.html
+++ b/src/app/pages/rank/rank/rank.component.html
@@ -3,8 +3,8 @@
         <div>
             Test's code is {{code}}
         </div>
-        <div>{{time$|async}}</div>
-        <button mat-raised-button [disabled]="isStarted$|async" class="align-items-end" (click)="startGame()">Start</button>
+        <!-- <div>{{time$|async}}</div> -->
+        <button mat-raised-button class="align-items-end" (click)="startGame()">Start</button>
     </mat-toolbar-row>
 </mat-toolbar>
 <div class="container d-flex flex-column my-3 justify-content-center">
