--- a/src/app/pages/create-game/create-question/create-question.component.html
+++ b/src/app/pages/create-game/create-question/create-question.component.html
@@ -17,22 +17,22 @@
   </mat-card-title>
   <mat-card-content>
     <mat-radio-group class="d-flex flex-column" [(ngModel)]="answer">
-      <mat-radio-button [value]="c1" class="ml-5 w-100">
-        <mat-form-field  class="w-75">
-          <input matInput class="w-75" placeholder="choice 1" [(ngModel)]="c1">
+      <mat-radio-button [value]="c1" class="ml-5">
+        <mat-form-field>
+          <input matInput placeholder="choice 1" [(ngModel)]="c1">
         </mat-form-field>
       </mat-radio-button>
-      <mat-radio-button [value]="c2">
+      <mat-radio-button [value]="c2" class="ml-5">
         <mat-form-field>
           <input matInput placeholder="choice 2" [(ngModel)]="c2">
         </mat-form-field>
       </mat-radio-button>
-      <mat-radio-button [value]="c3">
+      <mat-radio-button [value]="c3" class="ml-5">
         <mat-form-field>
           <input matInput placeholder="choice 3" [(ngModel)]="c3">
         </mat-form-field>
       </mat-radio-button>
-      <mat-radio-button [value]="c4">
+      <mat-radio-button [value]="c4" class="ml-5">
         <mat-form-field>
           <input matInput placeholder="choice 4" [(ngModel)]="c4">
         </mat-form-field>
