--- a/src/app/pages/create-game/prepared-question/prepared-question.component.html
+++ b/src/app/pages/create-game/prepared-question/prepared-question.component.html
@@ -2,5 +2,5 @@
   <div class="col-9">
     {{question.question}}
   </div>
-  <button class="float-right" mat-raised-button color="warn" (click)="add.emit(question)">Thêm</button>
+  <button class="float-right" mat-raised-button color="warn" (click)="add.emit(question)">Add</button>
 </div>
