--- a/src/app/pages/rank/rank/rank.component.html
+++ b/src/app/pages/rank/rank/rank.component.html
@@ -4,7 +4,7 @@
             Test's code is
         </h2>
         <!-- <div>{{time$|async}}</div> -->
-        <button mat-raised-button [disabled]="isStarted" class="align-items-end" (click)="startGame()">Start</button>
+        <button mat-raised-button color="warn" [disabled]="isStarted" class="align-items-end" (click)="startGame()">Start</button>
     </mat-toolbar-row>
 </mat-toolbar>
 <div class="d-flex justify-content-center" style="font-size:70px">{{code}}</div>
