--- a/src/app/pages/create-game/question-box/question-box.component.html
+++ b/src/app/pages/create-game/question-box/question-box.component.html
@@ -6,6 +6,6 @@
     </mat-radio-group>
   </mat-card-content>
   <mat-card-actions>
-    <button mat-raised-button color="warn" (click)="remove.emit(question)">Xóa</button>
+    <button mat-raised-button color="warn" (click)="remove.emit(question)">Remove</button>
   </mat-card-actions>
 </mat-card>
